# re-minimind

./: README.md  eval_llm.py  pyproject.toml
dataset/: README.md  lm_dataset.py
method/: GQA.py  RMSnorm.py  RoPE.py
model/: model.py  model_lora.py
trainer/: train_full_sft.py  train_pretrain.py  trainer_utils.py
